--- a/laboratorio-modulo1-leccion02-map-filter-reduce.ipynb
+++ b/laboratorio-modulo1-leccion02-map-filter-reduce.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "572"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,17 +634,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#1\n",
+    "\n",
+    "listanumeros = [2,4,-6,7,8,-10,20] \n",
+    "\n",
+    "numpositivo = list(filter(lambda n: n > 0, listanumeros))\n",
+    "numero_longitud = map(lambda n: n/len(numpositivo),numpositivo)\n",
+    "promedio = reduce(lambda n1,n2: n1+n2,numero_longitud)\n",
+    "\n",
+    "promedio"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ERAINGENIERA'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2\n",
+    "lista_palabras = ['tu','prima','era','fontanera','y','ingeniera']\n",
+    "\n",
+    "comienzamin = filter(lambda palabra: palabra.lower()[0] in 'aeiou', lista_palabras)\n",
+    "concatena = reduce(lambda p1,p2: (p1+p2).upper(),comienzamin)\n",
+    "\n",
+    "concatena\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3\n",
+    "Lista_numerica=[5,7,9,2,10]\n",
+    "\n",
+    "numeros_impares = filter(lambda n: n % 2 != 0, Lista_numerica)\n",
+    "productos = reduce(lambda n1,n2: n1*n2,numeros_impares)\n",
+    "productos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4\n",
+    "lista_palabras = ['rollo','jamon','prima','tututu''lala','genial']\n",
+    "\n",
+    "palabrasamin = filter(lambda palabra: 'a' in palabra.lower(), lista_palabras)\n",
+    "palabracona = map(lambda palabra: 1, palabrasamin)\n",
+    "Total_palabras = reduce(lambda palabra1,palabra2: palabra1+palabra2,palabracona)\n",
+    "Total_palabras"
+   ]
   }
  ],
  "metadata": {
